# experiments-3

monitor-go/: block.go  block_test.go  feed.go  fmt.sh  go.mod  main.go  project.sh  run.sh  server.go
monitor-go/test-data/: output-1.json
monitor-rust/: Cargo.toml  project.sh  run.sh
monitor-rust/src/: block.rs  feed.rs  lib.rs  main.rs  server.rs
monitor-rust/src/test-data/: output-2.json
