[package]
name = "monitor-rust"
version = "0.1.0"
authors = ["Gyuho Lee <gyuho@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
tokio = { version = "1.11.0", features = ["full"] }
tungstenite = "0.15.0"
url = "2.2.2"
